--- a/index.html
+++ b/index.html
@@ -270,45 +270,7 @@
                         }
                     )
 
-                    let lessonCounts = {};
-
-                    this.cart.forEach(cartId => {
-                        this.lessons.forEach(lesson => {
-                            if (cartId === lesson.id) {
-                                if (!lessonCounts[lesson.id]) {
-                                    lessonCounts[lesson.id] = 1;
-                                } else {
-                                    lessonCounts[lesson.id]++;
-                                }
-                            }
-                        });
-                    });
-
-                    const updateLessons = {};
-                    Object.keys(lessonCounts).forEach(lessonId => {
-                        this.lessons.forEach(lesson => {
-                            if (lessonId === lesson.id) {
-                                updateLessons[lesson._id] = { availableSpaces: lesson.availableSpaces - lessonCounts[lessonId] };
-                            }
-                        });
-                    });
-
-                    Object.keys(updateLessons).forEach(lessonId => {
-                        fetch(`https://afterschoolclasses2-env.eba-upgmncnr.eu-west-2.elasticbeanstalk.com/collections/lessons/${lessonId}`, {
-                            method: "PUT",
-                            headers: {
-                                "Content-Type": "application/json",
-                            },
-                            body: JSON.stringify(updateLessons[lessonId])
-                        })
-                            .then(response => response.json())
-                            .then(json => {
-                                console.log(`Success: ${json.acknowledged}`);
-                            })
-                            .catch(error => {
-                                console.error(`Error: ${error}`);
-                            });
-                    });
+                    updateLessons();
                     alert("Thank you for submitting your order!");
                 },
                 //Input validation methods
@@ -350,6 +312,38 @@
                         this.lessonsIdsOrder.push(i);
                         this.orderLessonSpaces = this.orderLessonSpaces + 1;
                     })
+                },
+                updateLessons() {
+
+                    counterMath = 0;
+                    counterSpanish = 0;
+                    counterCooking = 0;
+                    counterArts = 0;
+                    counterBiology = 0;
+                    counterChemistry = 0;
+                    counterGeography = 0;
+                    counterHistory = 0;
+                    counterPhotography = 0;
+                    counterPhysics = 0;
+                    counterBusiness = 0;
+                    counterZoology = 0;
+
+                    this.cart.forEach(cartId => {
+                        this.lessons.forEach(lesson => {
+                            if(cartId === lesson[0].id) {
+                                counterMath++;
+                                console.log(counterMath)
+                            }
+                            if(cartId === lesson[1].id) {
+                                counterSpanish++;
+                                console.log(counterSpanish)
+                            }
+                        });
+                    });
+
+
+
+
                 }
             },
             computed: {
